--- a/jpacman-framework/pom.xml
+++ b/jpacman-framework/pom.xml
@@ -16,6 +16,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<properties>
+
+		<sonar.organization>infom124-verification-et-validation</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
